syntax = "proto3";
package cusf.mainchain.v1;

message GetChainTipRequest {}

message Hash {
  string hex = 1;
}

message Work {
  string hex = 1;
}

message BlockHeaderInfo {
  Hash blockHash = 1;
  Hash prevBlockHash = 2;
  uint64 height = 3;
  Work work = 4;
}

message GetChainTipResponse {
  BlockHeaderInfo blockHeaderInfo = 1;
}

service ValidatorService {
  rpc GetChainTip(GetChainTipRequest) returns (GetChainTipResponse);
}
